# MathTgBot

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README_RU.md
assets/: mainConfig.json  responseConfig.json
src/: StringUtility.hpp  main.cpp
src/Bot/: Bot.hpp  MessageButtonsGenerate.hpp  OutpuSettingsToString.hpp
src/Responsers/: BDQueryTaskParse.hpp  OutputSettings.hpp  Responser.hpp  SqlCommands.hpp  UsersDB.hpp
src/ServiceLocator/: ExternLog.hpp  ExternService.hpp  GeneralLocator.hpp  Logger.hpp  ResponseConfig.hpp
src/ServiceLocator/Configs/: MainConfig.hpp  ResponseConfig.hpp
